# aytuMLauncher-Gold

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
sce_sys/livearea/contents/: template.xml
src/: main.c  vitajme.h
src/input/: input.c  input.h
src/javacall/: javacall_audio.c  javacall_file.c  javacall_input.c  javacall_lcd.c  javacall_network.c  javacall_os.c
src/launcher/: jad_parser.c  jad_parser.h  launcher.c  launcher.h
src/loader/: jar_loader.c  jar_loader.h
src/renderer/: renderer.c  renderer.h
